--- a/src/app/view/scss/_common.scss
+++ b/src/app/view/scss/_common.scss
@@ -131,9 +131,10 @@ textarea {
 }
 
 .input-title {
+  width: 100%;
   display: flex;
   .title-inside {
-    width: 150px !important;
+    width: 150px ;
     margin-right: 20px;
     position: relative;
   }
